Improvements and fixes
Article area no longer overflows in larger screens (If it causes an issue, you can blacklist the right rail from the page it will cause using $wgEvelutionDisableRightRailFromSpecificPages (Is an array)
Themed up the Save Changes button from VE
Preferences footer is once again sticky

--- a/resources/CPE.css
+++ b/resources/CPE.css
@@ -4957,7 +4957,10 @@ background-color:var(--highlight-background-color);
 .visualmode-contrast body .oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-buttonElement-button:focus:not(:active),
 .visualmode-contrast body .oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-destructive > .oo-ui-buttonElement-button:focus:not(:active),
 .visualmode-contrast body .mw-ui-button.mw-ui-progressive:not(:disabled):focus,
-.visualmode-contrast body .mw-ui-button.mw-ui-progressive:focus:not(:active)  {
+.visualmode-contrast body .mw-ui-button.mw-ui-progressive:focus:not(:active),
+.visualmode-contrast body .oo-ui-tool.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-tool-link:hover,
+.visualmode-contrast body .oo-ui-tool.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-tool-link:active,
+.visualmode-contrast body .oo-ui-tool.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-tool-link:focus {
     border-color:var(--button-background-color);
     color:var(--button-background-color);
     background-color:var(--button-foreground-color);
