--- a/resources/Evelution.css
+++ b/resources/Evelution.css
@@ -983,8 +983,11 @@ font-size:14px;
 min-height:240px; /* Required for Floating actions not to overlap */
 }
 
+@media only screen and (max-width:749px) {
 body:not(.ns--1) .evelution-article {
 overflow-x:auto;
+}
+
 }
 
 .evelution-article .cpe-button {
