--- a/resources/OOUI.css
+++ b/resources/OOUI.css
@@ -303,7 +303,7 @@ body .unpatrolled {
 .mw-prefs-buttons {
 	background-color:var(--canvas-background-color);
 	border-top-color:var(--inactive-text-background-color);
-	bottom:var(--luna-size);
+	bottom:var(--minibar-size);
 	transition:bottom 400ms var(--transitioner);
 }
 
@@ -453,7 +453,8 @@ body .oo-ui-tabSelectWidget-framed .oo-ui-tabOptionWidget.oo-ui-optionWidget-sel
 
 body .oo-ui-buttonElement > .oo-ui-buttonElement-button,
 body .mw-ui-button,
-body .mw-ui-button:not(:disabled) {
+body .mw-ui-button:not(:disabled),
+body .oo-ui-tool.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-tool-link {
 	--button-background-color:var(--highlight-background-color);
 	--button-background-color-hover:var(--highlight-background-color-hover);
 	--button-foreground-color:var(--highlight-foreground-color);
@@ -482,6 +483,13 @@ body .mw-ui-button:not(:disabled) {
     outline:1px solid transparent;
     outline-offset:0px;
     box-shadow:none!important;
+}
+
+body .oo-ui-tool.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-tool-link {
+	border-radius:0!important;
+	padding:11px;
+	border-width:2px;
+	border-style:solid;
 }
 
 /* Progressive */
@@ -720,7 +728,8 @@ body .oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-buttonElement-active
 body .oo-ui-buttonSelectWidget.oo-ui-widget-enabled:focus .oo-ui-buttonOptionWidget.oo-ui-optionWidget-selected .oo-ui-buttonElement-button,
 body .mw-ui-button.mw-ui-progressive,
 body .mw-ui-button.mw-ui-progressive:not(:disabled),
-body .mw-ui-button.mw-ui-progressive:disabled {
+body .mw-ui-button.mw-ui-progressive:disabled,
+body .oo-ui-tool.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-tool-link {
     border-color:var(--button-border-color);
     background-color:var(--button-background-color);
     color:var(--button-foreground-color);
@@ -729,7 +738,8 @@ body .mw-ui-button.mw-ui-progressive:disabled {
 body .oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-buttonElement-button:focus,
 body .oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-destructive > .oo-ui-buttonElement-button:focus,
 body .mw-ui-button.mw-ui-progressive:not(:disabled):focus,
-body .mw-ui-button.mw-ui-progressive:focus {
+body .mw-ui-button.mw-ui-progressive:focus,
+body .oo-ui-tool.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-tool-link:focus {
     border-color:var(--button-border-color);
     background-color:var(--button-background-color);
     color:var(--button-foreground-color);
@@ -740,7 +750,9 @@ body .oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-prima
 body .oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-buttonElement-active > .oo-ui-buttonElement-button:focus:hover,
 body .oo-ui-buttonSelectWidget.oo-ui-widget-enabled:focus .oo-ui-buttonOptionWidget.oo-ui-optionWidget-selected .oo-ui-buttonElement-button:hover,
 body .mw-ui-button.mw-ui-progressive:not(:disabled):hover,
-body .mw-ui-button.mw-ui-progressive:hover  {
+body .mw-ui-button.mw-ui-progressive:hover,
+body .oo-ui-tool.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-tool-link:hover,
+body .oo-ui-tool.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-tool-link:focus:hover {
     border-color:var(--button-border-color-hover);
     background-color:var(--button-background-color-hover);
     color:var(--button-foreground-color-hover);
@@ -754,7 +766,9 @@ body .oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-prima
 body .oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-buttonElement-active > .oo-ui-buttonElement-button:focus:active,
 body .oo-ui-buttonSelectWidget.oo-ui-widget-enabled:focus .oo-ui-buttonOptionWidget.oo-ui-optionWidget-selected .oo-ui-buttonElement-button:active,
 body .mw-ui-button.mw-ui-progressive:not(:disabled):active,
-body .mw-ui-button.mw-ui-progressive:active  {
+body .mw-ui-button.mw-ui-progressive:active,
+body .oo-ui-tool.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-tool-link:active,
+body .oo-ui-tool.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-tool-link:focus:active {
     border-color:var(--button-border-color-hover);
     background-color:var(--button-background-color-hover);
     color:var(--button-foreground-color-inverted);
@@ -764,7 +778,8 @@ body .mw-ui-button.mw-ui-progressive:active  {
 body .oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-buttonElement-button:focus:not(:active),
 body .oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-destructive > .oo-ui-buttonElement-button:focus:not(:active),
 body .mw-ui-button.mw-ui-progressive:not(:disabled):focus,
-body .mw-ui-button.mw-ui-progressive:focus:not(:active) {
+body .mw-ui-button.mw-ui-progressive:focus:not(:active),
+body .oo-ui-tool.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-tool-link:focus:not(:active) {
   outline-color:currentcolor;
   outline-offset:-2px;
   border-color:var(--button-border-color);
@@ -1351,12 +1366,8 @@ body #msupload-dropzone {
     border-color:var(--inactive-text-background-color);
 }
 
-
-body .oo-ui-toolbar .oo-ui-toolbar-bar .ve-ui-toolbar {
-    position: sticky;
-    position: -webkit-sticky;
+body .ve-ui-toolbar-floating > .oo-ui-toolbar-bar {
     top: var(--minibar-size);
-    z-index: 50000;
 }
 
 body .editOptions {
